[metadata]
name = pysages
author = Pablo Zubieta
authro_email = pzubieta@uchicago.edu
destription = PySAGES (Python Suite for Advanced General Ensemble Simulations) is an Python implementation of [SSAGES](https://ssagesproject.github.io) with support for GPUs.
long_description = file: README.md
long_description_content_type = text/x-rst
license_files = LICENSE.md GPL-3.0.md
license = MIT/GPL-3.0

[options]
packages = find:
python_requires = >=3.6
install_requires = jax>=0.2.15; cython; plum-dispatch>=1.5.4; fastcore; numba

[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build
warning-is-error = 1
